refactor: use getFirst over get(0)
With JDK 21 we can use getFirst